# bonfire64

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
documentation/: CONVENTIONS.md
src/: main.rs
src/configuration/: init.rs
src/cpu/: cop1.rs  cpu.rs  gpr.rs  mod.rs
src/environment/: cli.rs
src/file/: endian.rs  endian.test.rs  mod.rs  parse.rs  parse.test.rs  read.rs
src/logger/: utils.rs
src/memory/: map.rs  map.test.rs
src/mips/: mi.rs  mod.rs
src/system/: system.rs
