[package]
name = "bonfire64"
version = "0.1.0"
authors = ["Toby Hughes <tobywhughes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.18"
env_logger = "0.10.0"

[dev_dependencies]
rusty-hook = "0.11.2"